# rsi-trading-agent-v2

./: README.md  pyproject.toml  run_mvp.py
artifacts/20260411T102317Z-9321f7c3/: benchmark_metrics.json  dataset_metadata.json  equity_curve.json  feature_importances.json  optimization_events.json  report.md  returns.json  run_metrics.json  shap_rule.txt  strategy_params.json  trade_history_buffer.json  trades.json
artifacts/20260411T110459Z-3af3cfcf/: benchmark_metrics.json  config.yaml  dataset_metadata.json  equity_curve.json  feature_importances.json  optimization_events.json  report.md  returns.json  run_metrics.json  shap_rule.txt  split_metadata.json  strategy_params.json  trade_history_buffer.json  trades.json
artifacts/20260411T111746Z-d4fc2bbd/: benchmark_metrics.json  config.yaml  dataset_metadata.json  equity_curve.json  feature_importances.json  optimization_events.json  report.md  returns.json  run_metrics.json  shap_rule.txt  strategy_params.json  trade_history_buffer.json  trades.json
artifacts/20260411T114024Z-26b4e635/: benchmark_metrics.json  completed_trades.json  dataset_metadata.json  decision_log.json  decision_log.jsonl  equity_curve.json  report.json  (+11 more)
config/: config.yaml
data/: btc_1m_synthetic.csv  shap_rules.json
docs/: blockers-fixing-plan.md  code-review-report.md  development-plan.md  review-report.md
reports/: mvp_report.md  week1_report.md  week2_report.md  week3_report.md
scripts/: fetch_real_data.py  run_regression_windows.py
snapshots/: btcusdt_15m.parquet
tests/: test_nodes.py  test_observability.py  test_pipeline.py
(+555 files in other folders)
